--- a/main.html
+++ b/main.html
@@ -11,6 +11,8 @@
     <video class="flex" width="765" height="430" src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" controls></video>
     <div class="speed">
       <div class="speed-bar">1×</div>
+		<button onclick="forward()">Forward</button>
+      <button onclick="backward()">Backward</button>
     </div>
   </div>
 
